# tts-compare

./: .gitignore  CLAUDE.md  Makefile  README.md  config.yaml  pyproject.toml  requirements.txt
cli/: __init__.py  benchmark.py  clone.py  generate.py  main.py
engines/: __init__.py  base.py  chatterbox_engine.py  kokoro_engine.py  qwen3_engine.py
output/: .gitkeep
samples/: .gitkeep
scripts/: setup.sh
tests/: __init__.py  conftest.py  test_audio_utils.py  test_languages.py  test_performance.py  test_tts_basic.py  test_voice_clone.py
utils/: __init__.py  audio.py  metrics.py
